--- a/style_mobile.css
+++ b/style_mobile.css
@@ -48,14 +48,15 @@ body{
     background-size: cover;
     filter: blur(4px);
     animation: fadein 6s ease;
-    transition: all 1s ease;
+    transition: all 2.5s ease;
+    background-position-x: 65%;
     will-change: auto;
 }
 
 .content-blur{
     position: relative;
     margin: auto;
-    width: 60%;
+    width: 50%;
     height: 100%;
     background: rgba(0, 0, 0, 0.25);
     filter: blur(100px);
@@ -65,9 +66,8 @@ body{
 
 .main-wrap{
     height: 100vh;
-    width: 950px;
+    width: 80%;
     margin: auto;
-    padding-left: 50px;
     position:  relative;
     display: flex;
     flex-direction: column;
@@ -78,13 +78,13 @@ body{
 }
 
 .main-text{
-    height: 200px;
+    height: 400px;
     width: 100%;
 }
 
 .main-header{
     font-size: 75px;
-    height: 100px;
+    height: 300px;
     line-height: 100px;
     text-align: left;
     width: 100%;
@@ -98,30 +98,34 @@ body{
 .main-desc-container{
     margin-left: 5px;
     height: 50px;
-    line-height: 50px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     transition: all 0.5s ease;
     will-change: auto;
 }
 
+
 .main-desc{
     text-align: left;
-    font-size: 25px;
+    font-size: 15px;
     transition: all 0.5s ease;
     will-change: auto;
 }
 
 .main-desc:hover{
-    font-size: 25px;
+    font-size: 17px;
 }
 
 .main-desc-container:hover>.main-join-a{
-    color: rgb(0, 183, 255);
-    font-size: 32px;
- }
+   color: rgb(0, 183, 255);
+   font-size: 32px;
+}
 
 .main-join-a{
     color: dodgerblue;
-    font-size: 25px;
+    font-size: 30px;
+    width: 150px;
     transition: all 0.5s ease;
     will-change: auto;
 }
