--- a/cssreset.css
+++ b/cssreset.css
@@ -11,6 +11,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
+	color: white;
 	margin: 0;
 	padding: 0;
 	border: 0;
