Updated mobile css and added original background
the original background is back, and the mobile version's announcement spacing should be better now

--- a/style_mobile.css
+++ b/style_mobile.css
@@ -78,7 +78,7 @@ body{
 }
 
 .main-text{
-    height: 400px;
+    height: 350px;
     width: 100%;
 }
 
@@ -136,6 +136,7 @@ body{
 
 .main-announce{
     width: 100%;
+    margin-top: 50px;
 }
 
 .main-sub{
@@ -155,13 +156,13 @@ body{
 .main-paragraph-list{
     list-style: none;
     width: 95%;
-    margin-top: 30px;
+    margin-top: 10px;
     margin-left: 5%;
 }
 
 .main-paragraph{
     font-size: 20px;
-    width: 300px;
+    width: 100%;
     transition: all 0.5s ease;
     will-change: auto;
 }
