--- a/style_mobile.css
+++ b/style_mobile.css
@@ -17,7 +17,7 @@ body{
     zoom: 1;
     transform: scale(1.0);
     transform-origin: 0 0;
-    overflow: hidden;
+    overflow: hidden scroll;
     color: white;
     background: black;
 }
@@ -25,10 +25,10 @@ body{
 .wrapper{
     font-family: custom-light;
     max-width: 1920px;
+    min-height: 1000px;
     margin: auto;
     position: relative;
-    overflow-y: hidden;
-    overflow-x: visible; 
+    overflow: hidden;
     box-sizing: content-box;
     padding: 0px;
     color: white;
@@ -39,10 +39,11 @@ body{
     top: 0px;
     left: 0px;
     right: 0px;
+    bottom: 0px;
     transform: scale(1.1);
-    position: fixed;
+    position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: url("background/bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -67,7 +68,7 @@ body{
 .main-wrap{
     height: 100vh;
     width: 80%;
-    margin: auto;
+    margin: 45% auto 45% auto;
     position:  relative;
     display: flex;
     flex-direction: column;
@@ -155,9 +156,8 @@ body{
 
 .main-paragraph-list{
     list-style: none;
-    width: 95%;
+    width: 100%;
     margin-top: 10px;
-    margin-left: 5%;
 }
 
 .main-paragraph{
