--- a/style_mobile.css
+++ b/style_mobile.css
@@ -44,7 +44,7 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url("background/shordy.jpg");
+    background: url("background/bg2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     filter: blur(4px);
