--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ body{
 .main-paragraph{
     font-size: 20px;
     width: 500px;
+    margin-top: 5px;
     transition: all 0.5s ease;
     will-change: auto;
 }
