--- a/style_mobile.css
+++ b/style_mobile.css
@@ -163,6 +163,7 @@ body{
 .main-paragraph{
     font-size: 20px;
     width: 100%;
+    margin-top: 10px;
     transition: all 0.5s ease;
     will-change: auto;
 }
